Added header and linked css

--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="./resources/css/style.css">
 </head>
 <body>
-
+	<h1>Discover hidden places around you</h1>
+	<p>
+		<a class="links" href="#"> Download Excursion (Coming Soon!)</a>
+	</p>	
 </body>
 </html>
