--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
 	<h1>Discover hidden places around you</h1>
 	<p>
 		<a class="links" href="#"> Download Excursion (Coming Soon!)</a>
-	</p>	
+	</p>
+	<div class="video">
+		<video controls autoplay>
+			<source src="./resources/videos/excursion.mp4" type="video/mp4">
+		</video>	
+	</div>
+	<h1>Your personal travel guide</h1>
+
+	<h4> Excursion remembers places you like, and recommends new points of interest around you.</h4>
+	<img src="./resources/images/camp.jpg" alt ="Camping at dusk">
+
+	<div class="footer">
+		<img src="./resources/images/phone.png" alt="Phone image">
+		<p>
+			<h1> Coming soon for iPhone and Android</h1>
+			<a class="links" href="#"> Download Excursion (Coming Soon!)</a>
+			<h5 class="copy">Copyright Excursion &copy; 2017</h5>
+		</p>		
+	</div>	
 </body>
 </html>
